build: 重构代码